--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,18 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    /* border: 1px solid slateblue; */
+
 }
 
 :root {
     --primary-color: #4f46e5;
     --secondary-color: #9333ea;
+    --footer-color: #f0f2f7;
     --text-dark: #1e293b;
     --text-gray: #64748b;
     --font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    --font-size-paragraphs: 18px;
 }
 
 header {
@@ -178,4 +182,104 @@ header {
     border-radius: 50%;
     margin-bottom: 12px;
     box-shadow: 0 0 12px rgba(0,0,0,0.05);
+}
+
+footer {
+    background-color: var(--footer-color);
+    padding: 60px 80px 20px;
+    font-family: var(--font-family);
+    color: var(--text-gray);
+}
+
+#footer-content {
+    display: flex;
+    justify-content: space-between;
+    gap: 100px;
+    margin-bottom: 60px;
+}
+
+
+.footer-section {
+    flex: 1;
+    text-align: left;
+}
+
+.footer-section h3 {
+    font-size: 20px;
+    font-weight: 600;
+    color: var(--text-dark);
+    margin-bottom: 20px;
+}
+
+.footer-section p {
+    font-size: var(--font-size-paragraphs);
+    line-height: 1.8;
+    color: var(--text-gray);
+    margin-bottom: 10px;
+}
+
+.footer-section ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer-section ul li {
+    margin-bottom: 12px;
+}
+
+.footer-section ul li a {
+    text-decoration: none;
+    color: var(--text-gray);
+    font-size: var(--font-size-paragraphs);
+    transition: color 0.2s ease;
+}
+
+#footer-bottom {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 30px;
+}
+
+.social-icons {
+    display: flex;
+    gap: 15px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.social-icons li {
+    display: inline-block;
+}
+
+.social-icons a {
+    width: 40px;
+    height: 40px;
+    background-color: white;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    color: var(--text-dark);
+    font-weight: 600;
+}
+
+.social-icons a img {
+    width: 20px;
+    height: 20px;
+    object-fit: contain;
+}
+
+#copyright {
+    text-align: center;
+    padding: 0 10px;
+    margin: 30px -80px -20px -80px;
+    background-color: white;
+    border-top: 1px solid #d1d5db;
+}
+
+#copyright p {
+    font-size: 16px;
+    color: var(--text-gray);
 }
